Replace sequence diagram with new note diagram image
Updated the sequence diagram to include an image of the new note diagram.

--- a/part0/0.4_new_note_diagram.md
+++ b/part0/0.4_new_note_diagram.md
@@ -1,31 +1,1 @@
-sequenceDiagram
-    participant browser
-    participant server
-
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    activate server
-    Note left of server: Server creates new note object<br/>and adds it to notes array
-    server-->>browser: HTTP 302 Redirect to /notes
-    deactivate server
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
-    activate server
-    server-->>browser: HTML document
-    deactivate server
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    activate server
-    server-->>browser: the css file
-    deactivate server
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
-    activate server
-    server-->>browser: the JavaScript file
-    deactivate server
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
-    activate server
-    server-->>browser: [{ "content": "New note", "date": "2023-1-1" }, ... ]
-    deactivate server
-
-    Note right of browser: Browser renders notes including the new one
+<img width="1374" height="1444" alt="image" src="https://github.com/user-attachments/assets/e0be4535-6edf-49c6-827a-11264404cbc8" />
